--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>rest-toolkit-core</module>
         <module>rest-toolkit-utils</module>
         <module>rest-toolkit-starter</module>
-        <module>rest-toolkit-test-web</module>
+<!--        <module>rest-toolkit-test-web</module>-->
     </modules>
 
     <name>rest-toolkit-parent</name>
@@ -249,7 +249,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <aggregate>true</aggregate>
                     <charset>UTF-8</charset>
                     <encoding>UTF-8</encoding>
                     <docencoding>UTF-8</docencoding>
@@ -261,9 +260,6 @@
                             <goal>jar</goal>
                         </goals>
                         <phase>package</phase>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
