--- a/pom.xml
+++ b/pom.xml
@@ -130,17 +130,27 @@
         <security-rsa.version>1.1.5</security-rsa.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-parent</artifactId>
                 <version>${spring-boot.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>io.github.nichetoolkit</groupId>
                 <artifactId>rest-toolkit-parent</artifactId>
                 <version>${rest-toolkit.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>io.github.nichetoolkit</groupId>
@@ -157,6 +167,7 @@
                 <artifactId>rest-toolkit-starter</artifactId>
                 <version>${rest-toolkit.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
