--- a/rest-toolkit-starter/pom.xml
+++ b/rest-toolkit-starter/pom.xml
@@ -80,6 +80,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
